
 * Issue 235: FTPServer.serve_forever() has a new handle_exit parameter which
   can be set to False in order to avoid handling SIGTERM/SIGINT signals and
   logging server start and stop.

 * Issue 236: big logging refactoring; by default only useful messages are
   logged (as opposed to *all* commands and responses exchanged by client and
   server).

Bugfixes:

 * Issue 131: IPv6 dual-stack support was broken.

 * Issue 206: can't change directory (CWD) when using UnixAuthorizer and process
   cwd is == "/root".

 * Issue 211: pyftpdlib doesn't work if deprecated py-sendfile 1.2.4 module is
   installed.

 * Issue 215: usage of FTPHandler.sleeping attribute could lead to 100% CPU
   usage. FTPHandler.sleeping is now removed. self.add_channel() /
   self.del_channel() should be used instead.

 * Issue 222: an unhandled exception in handle_error() or close() can cause
   server crash.

 * Issue 229: backslashes on UNIX are not handled properly.

 * Issue 232: hybrid IPv4/IPv6 support is broken.  (patch by Claus Klein)

New modules:

All the code contained in pyftpdlib/ftpserver.py and pyftpdlib/contrib
namespaces has been moved here:

 * pyftpdlib.authorizers
 * pyftpdlib.filesystems
 * pyftpdlib.servers
 * pyftpdlib.handlers

New APIs:

 * pyftpdlib.authorizers.AuthenticationFailed
 * pyftpdlib.filesystems.FilesystemError
 * pyftpdlib.servers.ThreadedFTPServer
 * pyftpdlib.servers.MultiprocessFTPServer
 * pyftpdlib.handlers.FTPHandler's on_connect() and on_disconnect() callbacks.
 * pyftpdlib.handlers.FTPHandler.ftp_* methods return a meaningful value on
   success.
 * FTPServer, FTPHandler, DTPHandler new ioloop attribute.
 * pyftpdlib.lib.ioloop.IOLoop class (not supposed to be used directly)

Deprecated namespaces:

 * pyftpdlib.ftpserver
 * pyftpdlib.contrib.*

Incompatible API changes:

 * All the main classes have been extracted from ftpserver.py and split into sub
   modules.

  ----------------------------------------------------------------------------